--- a/src/main/resources/OcrMenu.fxml
+++ b/src/main/resources/OcrMenu.fxml
@@ -7,11 +7,11 @@
 
 <AnchorPane fx:id="ocrPane" prefHeight="146.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.ajuhzee.imageproc.view.OcrMenuController">
   <children>
-    <Button fx:id="stepOneButton" alignment="BASELINE_LEFT" mnemonicParsing="false" prefWidth="50.0" text="Schritt 1: Zeilen erkennen" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Button fx:id="stepTwoButton" alignment="BASELINE_LEFT" layoutY="25.0" mnemonicParsing="false" text="Schritt 2: Zeilen ausrichten" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
-      <Button fx:id="stepThreeButton" alignment="BASELINE_LEFT" layoutY="50.0" mnemonicParsing="false" text="Schritt 3: Buchstaben separieren" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
-      <Button fx:id="stepFourButton" alignment="BASELINE_LEFT" layoutY="75.0" mnemonicParsing="false" text="Schritt 4: Buchstabenmatching" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0" />
-      <Button fx:id="stepFiveButton" alignment="BASELINE_LEFT" layoutY="100.0" mnemonicParsing="false" text="Schritt 5: Ausgabe" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0" />
+    <Button fx:id="recognizeLine" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#recognizeLinePressed" prefWidth="50.0" text="Schritt 1: Zeilen erkennen" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Button fx:id="adjustLines" alignment="BASELINE_LEFT" layoutY="25.0" mnemonicParsing="false" onAction="#adjustLinesPressed" text="Schritt 2: Zeilen ausrichten" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
+      <Button fx:id="seperateCharacters" alignment="BASELINE_LEFT" layoutY="50.0" mnemonicParsing="false" onAction="#seperateCharactersPressed" text="Schritt 3: Buchstaben separieren" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+      <Button fx:id="matchCharacters" alignment="BASELINE_LEFT" layoutY="75.0" mnemonicParsing="false" onAction="#matchCharactersPressed" text="Schritt 4: Buchstabenmatching" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0" />
+      <Button fx:id="showOutput" alignment="BASELINE_LEFT" layoutY="100.0" mnemonicParsing="false" onAction="#showOutputPressed" text="Schritt 5: Ausgabe" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0" />
       <TextArea fx:id="outputTextField" layoutX="4.0" layoutY="125.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0" />
       <Button fx:id="ocrDoneButton" layoutY="325.0" mnemonicParsing="false" onAction="#doneButtonPressed" text="Fertig" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="325.0" />
   </children>
