--- a/src/main/resources/RotateMenu.fxml
+++ b/src/main/resources/RotateMenu.fxml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.*?>
-<GridPane fx:id="rotatePane" prefHeight="695.0" prefWidth="88.0" xmlns="http://javafx.com/javafx/8"
-		  xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.ajuhzee.imageproc.view.RotateMenuController">
+
+<GridPane fx:id="rotatePane" prefHeight="695.0" prefWidth="88.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.ajuhzee.imageproc.view.RotateMenuController">
 	<children>
-		<Slider fx:id="rotateAngleSlider" blockIncrement="1.0" majorTickUnit="15.0" max="180.0" min="-180.0"
-				minorTickCount="5" orientation="VERTICAL" prefHeight="462.0" prefWidth="14.0" showTickLabels="true"
-				showTickMarks="true" value="0.0" GridPane.halignment="CENTER"/>
-		<Button fx:id="rotateOkButton" alignment="BASELINE_CENTER" mnemonicParsing="false" onAction="#okButtonPressed"
-				text="OK" GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
-		<Label text="Füllfarbe" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM"/>
-		<ColorPicker fx:id="fillColor" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP"/>
+		<Slider fx:id="rotateAngleSlider" blockIncrement="1.0" majorTickUnit="15.0" max="180.0" min="-180.0" minorTickCount="5" orientation="VERTICAL" prefHeight="462.0" prefWidth="14.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.0" GridPane.halignment="CENTER" />
+		<Button fx:id="rotateOkButton" alignment="BASELINE_CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#okButtonPressed" text="OK" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets left="2.0" right="2.0" />
+         </GridPane.margin></Button>
+		<Label text="Füllfarbe" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+		<ColorPicker fx:id="fillColor" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancelButtonPressed" text="Cancel" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets left="2.0" right="2.0" />
+         </GridPane.margin>
+      </Button>
 	</children>
 	<columnConstraints>
-		<ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="80.0" prefWidth="100.0"/>
+		<ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="80.0" prefWidth="100.0" />
 	</columnConstraints>
 	<rowConstraints>
-		<RowConstraints minHeight="100.0" vgrow="ALWAYS"/>
-		<RowConstraints minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES"/>
-		<RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-		<RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+		<RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+		<RowConstraints minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
+		<RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+		<RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
 	</rowConstraints>
 </GridPane>
