--- a/src/main/resources/OpenClose.fxml
+++ b/src/main/resources/OpenClose.fxml
@@ -33,8 +33,8 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<Button fx:id="closeButton" mnemonicParsing="false" onAction="#closePressed" text="Open" />
-				<Button fx:id="openButton" mnemonicParsing="false" onAction="#openPressed" text="Close" GridPane.columnIndex="1" />
+				<Button fx:id="closeButton" mnemonicParsing="false" onAction="#closePressed" text="Close" />
+				<Button fx:id="openButton" mnemonicParsing="false" onAction="#openPressed" text="Open" GridPane.columnIndex="1" />
 			</children>
 		</GridPane>
       <Label text="Strukturgröße (px)" GridPane.columnSpan="2" GridPane.rowIndex="2" />
